# distributed-task-queue

./: .gitignore  Dockerfile.api  Dockerfile.worker  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
api/: Dockerfile  main.py  models.py  requirements.txt  results.py  tasks.py  utils.py
dtq/: Dockerfile  app.py  other_tasks.py  requirements.txt  signals.py  tasks.py
rabbitmq/: rabbitmq.conf
task_queue/: app.py  other_tasks.py  signals.py  tasks.py
worker/: Dockerfile
